commit translated contents

--- a/docs/code-quality/c26436.md
+++ b/docs/code-quality/c26436.md
@@ -7,22 +7,52 @@ f1_keywords:
 helpviewer_keywords:
 - C26436
 ms.assetid: 82d14d5d-5c5d-4e27-bdc8-268f9973a312
-ms.openlocfilehash: 2d01036fd8a14eab945cd48b187d415414873613
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+description: Regola CppCoreCheck che impone Linee guida di base di C++ C. 35
+ms.openlocfilehash: d182a35977f777af658a331510efaffb2d89fb89
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369535"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281692"
 ---
-# <a name="c26436-need_virtual_dtor"></a>C26436 NEED_VIRTUAL_DTOR
+# <a name="c26436-need_virtual_dtor"></a>NEED_VIRTUAL_DTOR C26436
 
-"Il tipo con una funzione virtuale richiede un distruttore non virtuale pubblico virtuale o protetto."
+"Il tipo con una funzione virtuale deve essere un distruttore virtuale pubblico o non virtuale protetto".
 
-**Linee guida**di base : C.35: un distruttore della classe base deve essere pubblico e virtuale o protetto e non virtuale
+[ **Linee guida di base di C++**: C. 35](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#c35-a-base-class-destructor-should-be-either-public-and-virtual-or-protected-and-non-virtual): un distruttore della classe base deve essere pubblico e virtuale o protetto e non virtuale
 
-Se una classe definisce una funzione virtuale diventa polimorfica, il che implica che le classi derivate possono modificare il comportamento, inclusa la logica di gestione e distruzione delle risorse. Poiché il codice client può chiamare tipi polimorfici tramite puntatori alle classi base, non è possibile che un client possa scegliere in modo esplicito il comportamento appropriato senza eseguire il downcast. Per assicurarsi che le risorse vengano gestite in modo coerente e che l'eliminazione venga eseguita in base alle regole del tipo effettivo, è consigliabile definire un distruttore virtuale pubblico. Se la gerarchia dei tipi è progettata per impedire al codice client di eliminare direttamente gli oggetti, i distruttori devono essere definiti come protetti non virtuali.
+Se una classe definisce una funzione virtuale, diventa polimorfica, che implica che le classi derivate possono modificarne il comportamento, inclusa la logica di distruzione e gestione delle risorse. Poiché il codice client può chiamare tipi polimorfici tramite puntatori a classi base, non esiste alcun modo in cui un client può scegliere in modo esplicito il comportamento appropriato senza downcast. Per assicurarsi che le risorse siano gestite in modo coerente e che la distruzione avvenga in base alle regole del tipo effettivo, è consigliabile definire un distruttore virtuale pubblico. Se la gerarchia dei tipi è progettata per impedire che il codice client elimini direttamente gli oggetti, i distruttori devono essere definiti come protetti non virtuali.
 
 ## <a name="remarks"></a>Osservazioni
 
 - L'avviso viene visualizzato nella prima definizione di funzione virtuale di un tipo (può essere un distruttore virtuale se non è pubblico), una volta per tipo.
-  - Poiché la definizione può essere inserita separatamente dalla dichiarazione, potrebbe non avere sempre uno degli identificatori virtuali. Ma l'avviso è ancora valido - controlla l'effettiva 'virtualità' di una funzione.
+  - Poiché la definizione può essere posizionata separatamente dalla dichiarazione, potrebbe non avere sempre uno degli identificatori virtuali. Tuttavia, l'avviso è ancora valido. controlla l'effettiva "virtualizzazione" di una funzione.
+
+## <a name="example"></a>Esempio
+```cpp
+namespace no_destructor
+{
+    struct base {
+        virtual void foo() {} // C26436, see remarks to understand the placement of the warning.
+    };
+}
+```
+
+L'avviso non viene visualizzato quando la classe base ha un distruttore pubblico virtuale o un distruttore non virtuale protetto.
+```cpp
+namespace virtual_destructor
+{
+    struct base {
+        virtual ~base();
+        virtual void foo() {}
+    };
+}
+namespace protected_destructor
+{
+    struct base {
+        virtual void foo() {}
+    protected:
+        ~base() {}
+    };
+}
+```
