--- a/docs/code-quality/c26439.md
+++ b/docs/code-quality/c26439.md
@@ -7,28 +7,59 @@ f1_keywords:
 helpviewer_keywords:
 - C26439
 ms.assetid: 9df2a1b0-ea94-4884-9d28-c1522ec33a1b
-ms.openlocfilehash: 79d325397f98b5cca5a5f434bb4a8ef505c6d787
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+description: Regola CppCoreCheck che impone Linee guida di base di C++ F. 6
+ms.openlocfilehash: a64d4323caa48893289f61afc47cd9f79b77c49d
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369519"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281653"
 ---
 # <a name="c26439-special_noexcept"></a>C26439 SPECIAL_NOEXCEPT
 
-"Questo tipo di funzione non può gettare. Dichiararlo 'noexcept'."
+"Questo tipo di funzione non può essere generata. Dichiara ' noexcept ' ".
 
-**Linee guida**di base : F.6: Se la funzione non può generare, dichiararla noexcept
+[ **Linee guida di base di C++** F. 6](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f6-if-your-function-may-not-throw-declare-it-noexcept): se non è possibile generare la funzione, dichiararla noexcept
 
-Alcuni tipi di operazioni non dovrebbero mai causare eccezioni. Le implementazioni devono essere affidabili e gestire le possibili condizioni di errore in modo normale. Non devono mai usare eccezioni per indicare un errore. Questa regola contrassegna i casi in cui tali operazioni non sono contrassegnate in modo esplicito come "noexcept", il che significa che possono generare eccezioni e non possono trasmettere ipotesi sulla loro affidabilità.
+Alcuni tipi di operazioni non devono mai causare eccezioni. Le rispettive implementazioni devono essere affidabili e gestire correttamente le condizioni di errore possibili. Non devono mai usare eccezioni per indicare un errore. Questa regola contrassegna i casi in cui tali operazioni non vengono contrassegnate in modo esplicito come ' noexcept ', il che significa che possono generare eccezioni e non possono fornire presupposti sulla relativa affidabilità.
 
 ## <a name="remarks"></a>Osservazioni
 
-- Tipi speciali di operazioni sono i seguenti:
-  - distruttori;
+- Di seguito sono riportati alcuni tipi speciali di operazioni:
+  - distruttori
   - costruttori predefiniti;
-  - spostare costruttori e operatori di assegnazione di spostamento;
-  - funzioni standard con semantica di spostamento: std::move e std::swap.
-- Gli identificatori non standard e obsoleti come throw() o declspec(nothrow) non sono equivalenti a 'noexcept'.
-- Gli identificatori espliciti noexcept(false) e noexcept(true) vengono rispettati in modo appropriato.
-- L'avviso potrebbe ancora essere visualizzato per le operazioni contrassegnate come constexpr. Questo potrebbe cambiare nelle versioni future.
+  - costruttori di spostamento e operatori di assegnazione di spostamento.
+  - funzioni standard con semantica di spostamento: std:: Move e std:: swap.
+- Gli identificatori non standard e obsoleti come throw () o declspec (nothrow) non sono equivalenti a' noexcept '.
+- Gli identificatori espliciti noexcept (false) e noexcept (true) vengono rispettati in modo appropriato.
+- L'avviso può comunque essere visualizzato per le operazioni contrassegnate come constExpr. Questo può cambiare nelle versioni future.
+
+## <a name="example"></a>Esempio
+Tutte le funzioni, ad eccezione del distruttore, verranno avvertite perché mancano noexcept. 
+```cpp
+struct S 
+{
+    S() {} // C26455, Default constructor may not throw. Declare it 'noexcept' 
+    ~S() {}
+    
+    S(S&& s) {/*impl*/} // C26439, This kind of function may not throw. Declare it 'noexcept' (f.6)
+    S& operator=(S&& s) {/*impl*/} // C26439, This kind of function may not throw. Declare it 'noexcept' (f.6)
+
+    S(const S& s) {/*impl*/} // C26440, This function can be declared 'noexcept'
+    S& operator=(const S& s) {/*impl*/} // C26440, This function can be declared 'noexcept'
+};
+```
+Con noexcept Decorating la stessa struttura, vengono rimossi tutti gli avvisi.
+```cpp
+struct S 
+{
+    S() noexcept {}
+    ~S() {}
+    
+    S(S&& s) noexcept {/*impl*/}
+    S& operator=(S&& s) noexcept {/*impl*/}
+
+    S(const S& s) noexcept {/*impl*/}
+    S& operator=(const S& s) noexcept {/*impl*/}
+};
+```
