--- a/docs/code-quality/c26493.md
+++ b/docs/code-quality/c26493.md
@@ -6,13 +6,26 @@ f1_keywords:
 - C26493
 helpviewer_keywords:
 - C26493
-ms.openlocfilehash: d080c89b0cb9d5630d94b3f58ff38578d124f773
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ tipo. 4
+ms.openlocfilehash: 60592e50bff6912344e2819d4cf6b9b4e3368cb2
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416779"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281731"
 ---
 # <a name="c26493-no_cstyle_cast"></a>C26493 NO_CSTYLE_CAST
 
-Non usare cast di tipo C. Vedere [ C++ linee guida di base tipo. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+Non usare cast di tipo C. 
+
+## <a name="see-also"></a>Vedere anche
+[Linee guida di base di C++ tipo. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+
+## <a name="example"></a>Esempio
+```cpp
+void function(const int* const_i)
+{
+    int* nonconst_i = (int*)const_i; // C26493 Don't use C-style casts
+    int i = (int)*const_i; // C26493 Don't use C-style casts
+}
+```
