--- a/docs/code-quality/c26401.md
+++ b/docs/code-quality/c26401.md
@@ -7,15 +7,46 @@ f1_keywords:
 helpviewer_keywords:
 - C26401
 ms.assetid: b9d3d398-697a-4a5d-8bfe-9c667dffb90b
-ms.openlocfilehash: 7d1fc52dcf735423df4959521dfd69673231d2a8
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+description: Regola CppCoreCheck che impone Linee guida di base di C++ I. 11
+ms.openlocfilehash: bcf677b76898fcd06a06c86742569bb49c76f342
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87198528"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281679"
 ---
 # <a name="c26401-dont_delete_non_owner"></a>DONT_DELETE_NON_OWNER C26401
 
 Questo controllo rileva le posizioni in cui `owner<T>` il passaggio a può essere una soluzione ideale per la prima fase del refactoring. Analogamente a C26400, applica le regole I. 11 e R. 3, ma è incentrato sulla parte "release" della durata del puntatore. Viene visualizzato un avviso su qualsiasi chiamata a Operator **`delete`** se la relativa destinazione non è né un `owner<T>` proprietario assunto in modo implicito. Per ulteriori informazioni, vedere [C26400](c26400.md) relative alle **`auto`** dichiarazioni. Sono incluse le espressioni che fanno riferimento a variabili globali, moduli e così via.
 
 Gli avvisi C26400 e C26401 si verificano sempre con [C26409](c26409.md), ma sono più appropriati per gli scenari in cui non è possibile eseguire la migrazione immediata ai puntatori intelligenti. In questi casi, il `owner<T>` concetto può essere adottato per primo e C26409 può essere temporaneamente eliminato.
+
+## <a name="see-also"></a>Vedere anche
+[Linee guida di base di C++ I. 11](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#i11-never-transfer-ownership-by-a-raw-pointer-t-or-reference-t)
+
+## <a name="example"></a>Esempio
+```cpp
+struct myStruct {};
+
+myStruct* createMyStruct();
+void function()
+{
+    myStruct* pMyStruct = createMyStruct();
+    // ... 
+    delete pMyStruct; // C26401. Do not delete a raw pointer that is not an owner<T>
+}
+```
+
+Vedere che C26401 viene rimosso se la proprietà del puntatore è indicata da GSL:: Owner.
+```cpp
+#include <gsl/pointers>
+struct myStruct {};
+
+gsl::owner<myStruct*> createMyStruct();
+void function()
+{
+    gsl::owner<myStruct*> pMyStruct = createMyStruct();
+    // ... 
+    delete pMyStruct; // no warning.
+}
+```
