--- a/docs/code-quality/c26408.md
+++ b/docs/code-quality/c26408.md
@@ -7,12 +7,13 @@ f1_keywords:
 helpviewer_keywords:
 - C26408
 ms.assetid: 55b0706f-1107-41c1-8ad0-c9e1e86a3b8c
-ms.openlocfilehash: 61ce5b4eea726aaa6a65ab196c6aec381f5f33fd
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+description: Regola CppCoreCheck che impone Linee guida di base di C++ R. 10
+ms.openlocfilehash: 65dfb102a26db01ac32ee2cf04e7f3321eb08092
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87226125"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281861"
 ---
 # <a name="c26408-no_malloc_free"></a>C26408 NO_MALLOC_FREE
 
@@ -23,3 +24,23 @@ Questo avviso contrassegna il punto `malloc` in cui o `free` viene richiamato in
 - Per rilevare malloc () si verifica se una chiamata richiama una funzione globale con il nome "malloc" o "STD:: malloc". La funzione deve restituire un puntatore a **`void`** e accettare un parametro di tipo integrale senza segno.
 
 - Per rilevare Free (), le funzioni globali vengono controllate con i nomi "Free" o "STD:: Free" che non restituiscono alcun risultato e accettano un parametro, che è un puntatore a **`void`** .
+
+## <a name="see-also"></a>Vedere anche
+[Linee guida di base di C++ R. 10](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r10-avoid-malloc-and-free)
+
+## <a name="example"></a>Esempio
+```cpp
+#include <new>
+
+struct myStruct {};
+
+void function_malloc_free() {
+    myStruct* ms = static_cast<myStruct*>(malloc(sizeof(myStruct))); // C26408
+    free(ms); // C26408
+}
+
+void function_nothrow_new_delete() {
+    myStruct* ms = new(std::nothrow) myStruct;
+    operator delete (ms, std::nothrow);
+}
+```
