--- a/docs/code-quality/c26440.md
+++ b/docs/code-quality/c26440.md
@@ -7,28 +7,59 @@ f1_keywords:
 helpviewer_keywords:
 - C26440
 ms.assetid: b6d2b188-35cc-4de2-878c-6f97d5a2444a
-ms.openlocfilehash: d28431087b2b01c65f6dce18d21aa5cc72c8a898
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+description: Regola CppCoreCheck che impone Linee guida di base di C++ F. 6
+ms.openlocfilehash: bb44f93631d38bed6f392892ec4b23dff499fd23
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81353789"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281830"
 ---
-# <a name="c26440-declare_noexcept"></a>C26440 DECLARE_NOEXCEPT
+# <a name="c26440-declare_noexcept"></a>DECLARE_NOEXCEPT C26440
 
-"La funzione può essere dichiarata 'noexcept'."
+"La funzione può essere dichiarata come ' noexcept '".
 
-**Linee guida**di base : F.6: Se la funzione non può generare, dichiararla noexcept
+[ **Linee guida di base di C++** F. 6](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f6-if-your-function-may-not-throw-declare-it-noexcept): se non è possibile generare la funzione, dichiararla noexcept
 
-Se il codice non deve causare eccezioni, deve essere contrassegnato come tale utilizzando l'identificatore 'noexcept'. Ciò consentirebbe di semplificare la gestione degli errori sul lato codice client, nonché consentire al compilatore di eseguire ottimizzazioni aggiuntive.
+Se il codice non deve causare eccezioni, deve essere contrassegnato come tale utilizzando l'identificatore ' noexcept '. Ciò consente di semplificare la gestione degli errori sul lato del codice client, oltre a consentire al compilatore di eseguire ottimizzazioni aggiuntive.
 
 ## <a name="remarks"></a>Osservazioni
 
-- Una funzione è considerata non generante se:A function is considered non-throwing if:
-  - non ha istruzioni throw esplicite;
-  - chiamate di funzione nel suo corpo, se presente, richiamare solo funzioni che improbabile generare: constexpr o funzioni contrassegnate con qualsiasi specifica di eccezione che comporta un comportamento non generante (incluse alcune specifiche non standard).
-- Gli identificatori non standard e obsoleti come throw() o declspec(nothrow) non sono equivalenti a 'noexcept'.
-- Gli identificatori espliciti noexcept(false) e noexcept(true) vengono rispettati in modo appropriato.
-- Le funzioni contrassegnate come constexpr non devono causare eccezioni e non vengono analizzate.
+- Una funzione è considerata non generata se:
+  - non contiene istruzioni throw esplicite;
+  - le chiamate di funzione nel corpo, se presenti, richiamano solo le funzioni che improbabilemente generano: constExpr o funzioni contrassegnate con una specifica di eccezione che comporta un comportamento non di generazione (incluse alcune specifiche non standard).
+- Gli identificatori non standard e obsoleti come throw () o declspec (nothrow) non sono equivalenti a' noexcept '.
+- Gli identificatori espliciti noexcept (false) e noexcept (true) vengono rispettati in modo appropriato.
+- Le funzioni contrassegnate come constExpr non dovrebbero causare eccezioni e non vengono analizzate.
 - La regola si applica anche alle espressioni lambda.
 - La logica non considera le chiamate ricorsive come potenzialmente non generanti. Questo potrebbe cambiare in futuro.
+
+## <a name="example"></a>Esempio
+Tutte le funzioni, ad eccezione del distruttore, verranno avvertite perché mancano noexcept. 
+```cpp
+struct S 
+{
+    S() {} // C26455, Default constructor may not throw. Declare it 'noexcept' 
+    ~S() {}
+    
+    S(S&& s) {/*impl*/} // C26439, This kind of function may not throw. Declare it 'noexcept' (f.6)
+    S& operator=(S&& s) {/*impl*/} // C26439, This kind of function may not throw. Declare it 'noexcept' (f.6)
+    
+    S(const S& s) {/*impl*/} // C26440, This function can be declared 'noexcept'
+    S& operator=(const S& s) {/*impl*/} // C26440, This function can be declared 'noexcept'
+};
+```
+Con noexcept Decorating la stessa struttura, vengono rimossi tutti gli avvisi.
+```cpp
+struct S 
+{
+    S() noexcept {}
+    ~S() {}
+    
+    S(S&& s) noexcept {/*impl*/}
+    S& operator=(S&& s) noexcept {/*impl*/}
+    
+    S(const S& s) noexcept {/*impl*/}
+    S& operator=(const S& s) noexcept {/*impl*/}
+};
+```
