--- a/docs/code-quality/c26482.md
+++ b/docs/code-quality/c26482.md
@@ -6,13 +6,27 @@ f1_keywords:
 - C26482
 helpviewer_keywords:
 - C26482
-ms.openlocfilehash: a01ce79469cbef7fdb01b6905993018244ad893c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone limiti di Linee guida di base di C++. 2
+ms.openlocfilehash: 55eb0460584db4d5fa50ab9d1b85f141fc873353
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417962"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281627"
 ---
 # <a name="c26482-no_dynamic_array_indexing"></a>NO_DYNAMIC_ARRAY_INDEXING C26482
 
-Indicizzare solo le matrici usando espressioni costanti. Vedere [ C++ limiti delle linee guida di base. 2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-bounds)
+Indicizzare solo le matrici usando espressioni costanti. 
+## <a name="see-also"></a>Vedere anche
+[Limiti di Linee guida di base di C++. 2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-bounds)
+
+## <a name="example"></a>Esempio
+
+```cpp
+int getSomeIndex();
+
+void function(int* p, int count)
+{
+    p[getSomeIndex()] = 0; // C26482, Only index into arrays using constant expressions
+}
+```
