--- a/docs/code-quality/c26490.md
+++ b/docs/code-quality/c26490.md
@@ -6,13 +6,24 @@ f1_keywords:
 - C26490
 helpviewer_keywords:
 - C26490
-ms.openlocfilehash: 0f4636aad9991d32fd7598efe1fba1047c75b56b
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ tipo. 1
+ms.openlocfilehash: 2bbefb3856f065bdd29d9a1fdd12bf16d41481b5
+ms.sourcegitcommit: e58918c45316d799c1952ca7797a85adbcd0c472
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416800"
+ms.lasthandoff: 09/01/2020
+ms.locfileid: "89281744"
 ---
 # <a name="c26490-no_reinterpret_cast"></a>C26490 NO_REINTERPRET_CAST
 
-Non usare `reinterpret_cast`. Vedere [ C++ linee guida di base digitare. 1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+Non usare `reinterpret_cast` . 
+## <a name="see-also"></a>Vedere anche 
+[Linee guida di base di C++ tipo 1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+
+## <a name="example"></a>Esempio
+```cpp
+void function(void* ptr)
+{
+    std::size_t val = reinterpret_cast<std::size_t>(ptr); // C26490, Don't use reinterpret_cast
+}
+```
