--- a/docs/code-quality/c26460.md
+++ b/docs/code-quality/c26460.md
@@ -6,13 +6,40 @@ f1_keywords:
 - C26460
 helpviewer_keywords:
 - C26460
-ms.openlocfilehash: 5ed64d38b3a26054f948934480e170d998f74668
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ con. 3
+ms.openlocfilehash: 4d537d8547ffc553ecd905df642b384e369a5c2d
+ms.sourcegitcommit: c6899428278ae7010fe6e98400c6c3553878abc5
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418102"
+ms.lasthandoff: 09/02/2020
+ms.locfileid: "89385417"
 ---
 # <a name="c26460-use_const_reference_arguments"></a>C26460 USE_CONST_REFERENCE_ARGUMENTS
+L'argomento di riferimento '% argument%' per la funzione '% Function%' può essere contrassegnato come `const` (con. 3). 
 
-  L'argomento di riferimento '% argument%' per la funzione '% Function%' può essere contrassegnato come `const`. Vedere [ C++ linee guida di base con. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rconst-ref).
+Il passaggio di un oggetto per riferimento indica che la funzione può modificare l'oggetto. Se questo non è lo scopo della funzione, è preferibile contrassegnare l'argomento come riferimento const.  
+
+## <a name="see-also"></a>Vedere anche 
+[Linee guida di base di C++ con. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rconst-ref).
+
+## <a name="example"></a>Esempio
+```cpp
+struct MyStruct
+{
+    void MemberFn1() const;
+    void MemberFn2();
+};
+
+
+void Function1_Helper(const MyStruct&);
+void Function1(MyStruct& myStruct) // C26460, see comments below.
+{
+    myStruct.MemberFn1();       // The member function is marked as const
+    Function1_Helper(myStruct); // Function1_Helper takes a const reference
+}
+
+void Function2(MyStruct& myStruct)
+{
+    myStruct.MemberFn2(); // MemberFn2 is non-const and has the potential to modify data
+}
+```
