commit translated contents

--- a/docs/code-quality/c26495.md
+++ b/docs/code-quality/c26495.md
@@ -6,13 +6,35 @@ f1_keywords:
 - C26495
 helpviewer_keywords:
 - C26495
-ms.openlocfilehash: 6223e2d4570d608a0977ff6ab2b54856694ebac8
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ tipo. 6
+ms.openlocfilehash: ac608b453f2d835cf59adfdf1b0dad059dc942b4
+ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417913"
+ms.lasthandoff: 09/03/2020
+ms.locfileid: "89427647"
 ---
 # <a name="c26495-member_uninit"></a>MEMBER_UNINIT C26495
 
-La variabile '% variable%' non è inizializzata. Inizializzare sempre una variabile membro. Vedere [ C++ linee guida di base digitare. 6](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type).
+La variabile '% variable%' non è inizializzata. Inizializzare sempre una variabile membro (Type. 6). 
+
+## <a name="see-also"></a>Vedere anche
+Linee guida di base di C++ [tipo 6](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-type) e [C. 48](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#c48-prefer-in-class-initializers-to-member-initializers-in-constructors-for-constant-initializers)
+
+
+## <a name="example"></a>Esempio
+```cpp
+struct MyStruct 
+{
+    int value;
+    MyStruct() {}; // C26495, MyStruct::value is uninitialized
+};
+```
+Per correggere l'avviso, aggiungere gli inizializzatori in-Class a tutte le variabili membro. Per ulteriori informazioni, vedere le pagine Linee guida di base di C++ collegate sopra.
+```cpp
+struct MyStruct 
+{
+    int value{};
+    MyStruct() {}; // no warning, MyStruct::value is set via default member initialization
+};
+```
