--- a/docs/code-quality/c26462.md
+++ b/docs/code-quality/c26462.md
@@ -6,13 +6,32 @@ f1_keywords:
 - C26462
 helpviewer_keywords:
 - C26462
-ms.openlocfilehash: eaffa26d8772e2ed92ae083ab15fbee3d54e3843
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ con. 4
+ms.openlocfilehash: 16cc3d8c5146d84df58a5ee2751f2111a0f0cdeb
+ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418081"
+ms.lasthandoff: 09/03/2020
+ms.locfileid: "89427686"
 ---
 # <a name="c26462-use_const_pointer_for_variable"></a>C26462 USE_CONST_POINTER_FOR_VARIABLE
 
-Il valore a cui fa riferimento '% variable%' viene assegnato una sola volta, contrassegnarlo come puntatore a `const`. Vedere [ C++ linee guida di base con. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con4-use-const-to-define-objects-with-values-that-do-not-change-after-construction).
+Il valore a cui fa riferimento '% variable%' viene assegnato una sola volta, contrassegnarlo come puntatore a `const` (con. 4). 
+
+I puntatori alle variabili i cui valori rimangono invariati devono essere contrassegnati come const.
+
+## <a name="see-also"></a>Vedere anche
+[Linee guida di base di C++ con. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con4-use-const-to-define-objects-with-values-that-do-not-change-after-construction).
+
+## <a name="example"></a>Esempio
+```cpp
+void useVal(int val);
+
+void function1(int* ptr)
+{
+    int* p = ptr; // C26462, the value pointed to by p is unmodified
+    ptr = nullptr;
+
+    useVal(*p);
+}
+```
