--- a/docs/code-quality/c26464.md
+++ b/docs/code-quality/c26464.md
@@ -6,13 +6,20 @@ f1_keywords:
 - C26464
 helpviewer_keywords:
 - C26464
-ms.openlocfilehash: 5ecb19c387cd8e6b722bbdeb77ab2e67360be262
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Avviso segnaposto CppCoreCheck per l'imposizione futura con. 4
+ms.openlocfilehash: fbcd6b0938d22bfc78341aecc3370922fdfbc00d
+ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418088"
+ms.lasthandoff: 09/03/2020
+ms.locfileid: "89427556"
 ---
 # <a name="c26464-use_const_pointer_for_elements"></a>C26464 USE_CONST_POINTER_FOR_ELEMENTS
 
-I valori a cui puntano gli elementi dell'array '% array%' sono assegnati una sola volta, contrassegnare gli elementi come puntatore a `const`. Vedere [ C++ linee guida di base con. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con4-use-const-to-define-objects-with-values-that-do-not-change-after-construction).
+I valori a cui puntano gli elementi dell'array '% array%' sono assegnati una sola volta, contrassegnare gli elementi come puntatore a `const` (con. 4). 
+
+## <a name="see-also"></a>Vedere anche
+[Linee guida di base di C++ con. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con4-use-const-to-define-objects-with-values-that-do-not-change-after-construction).
+
+## <a name="remarks"></a>Osservazioni
+- Questa regola non è attualmente implementata in CppCoreCheck. 
