--- a/docs/code-quality/c26483.md
+++ b/docs/code-quality/c26483.md
@@ -6,13 +6,30 @@ f1_keywords:
 - C26483
 helpviewer_keywords:
 - C26483
-ms.openlocfilehash: 7e9b3a30051b70ac660235bd2197185f64cecc46
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone limiti di Linee guida di base di C++. 2
+ms.openlocfilehash: 12cc4711d2dcdb380feeec958ae8786236ff5137
+ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417969"
+ms.lasthandoff: 09/03/2020
+ms.locfileid: "89427673"
 ---
 # <a name="c26483-static_index_out_of_range"></a>STATIC_INDEX_OUT_OF_RANGE C26483
 
-Il valore% Value% è esterno ai limiti (0,% Bound%) della variabile '% variable%'. Indicizzare solo in matrici usando espressioni costanti comprese nei limiti della matrice. Vedere [ C++ limiti delle linee guida di base. 2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-bounds)
+Il valore% Value% è esterno ai limiti (0,% Bound%) della variabile '% variable%'. Indicizzare solo le matrici usando espressioni costanti all'interno dei limiti della matrice (Bounds. 2). 
+
+## <a name="see-also"></a>Vedere anche
+[Limiti di Linee guida di base di C++. 2](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-bounds)
+
+## <a name="example"></a>Esempio
+```cpp
+void function()
+{
+    std::array<int, 3> arr1 { 1, 2, 3 };
+    arr1[3] = 4; // C26483, 3 is outside the bounds of the array
+    
+    int arr2[] { 1, 2, 3 };
+    arr2[3] = 4; // C26483, 3 is outside the bounds of the array
+}
+
+```
