--- a/docs/code-quality/c26497.md
+++ b/docs/code-quality/c26497.md
@@ -6,13 +6,27 @@ f1_keywords:
 - C26497
 helpviewer_keywords:
 - C26497
-ms.openlocfilehash: a4b4a5af0ab97552e054e2a48e2591bf83cbba34
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+description: Regola CppCoreCheck che impone Linee guida di base di C++ F. 4
+ms.openlocfilehash: 0481261986c0d4df0d1740ba3918b88f815ca6b6
+ms.sourcegitcommit: 093f49b8b69daf86661adc125b1d2d7b1f0e0650
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417885"
+ms.lasthandoff: 09/03/2020
+ms.locfileid: "89427701"
 ---
-# <a name="c26497-use_constexpr_for_function"></a>C26497 USE_CONSTEXPR_FOR_FUNCTION
+# <a name="c26497-use_constexpr_for_function"></a>USE_CONSTEXPR_FOR_FUNCTION C26497
 
-Questa funzione% Function% potrebbe essere contrassegnata `constexpr` se si desidera la valutazione in fase di compilazione. Vedere [ C++ linee guida di base F. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rf-constexpr).
+Questa funzione% Function% potrebbe essere contrassegnata `constexpr` se si desidera la valutazione in fase di compilazione (f. 4).  
+
+## <a name="see-also"></a>Vedere anche
+[Linee guida di base di C++ F. 4](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rf-constexpr).
+
+## <a name="example"></a>Esempio
+```cpp
+const int GetTheAnswer(int x) noexcept { return 42 + x; } // Could be marked constexpr
+
+void function1() noexcept
+{
+    const int theAnswer = GetTheAnswer(0);
+}
+```
