commit translated contents

--- a/docs/code-quality/c33004.md
+++ b/docs/code-quality/c33004.md
@@ -12,18 +12,18 @@ helpviewer_keywords:
 - C33004
 dev_langs:
 - C++
-ms.openlocfilehash: 2c54eb75809f2a4cae298540ed079d5cedb31ff3
-ms.sourcegitcommit: 4ed2d68634eb2fb77e18110a2d26bc0008be369c
+ms.openlocfilehash: f83541ed5f8a662364d19b443c0e54367ea018cb
+ms.sourcegitcommit: a6b97f5d78299ad93675de2fe0f0561f528d26c7
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/08/2020
-ms.locfileid: "89557676"
+ms.lasthandoff: 09/15/2020
+ms.locfileid: "90569567"
 ---
 # <a name="c33004"></a>C33004
 
 > Avviso C33004: la variante ' var ', contrassegnata come _out_ , è stata cancellata prima di essere inizializzata (espressione ' expr ')
 
-Questo avviso viene generato quando un parametro VARIANT con \_ \_ annotazione out Sal, che potrebbe non essere inizializzato nell'input, viene passato a un'API, ad esempio VariantClear, che prevede una variante inizializzata.
+Questo avviso viene generato quando un parametro VARIANT con \_ \_ annotazione out Sal, che potrebbe non essere stato inizializzato nell'input, viene passato a un'API, ad esempio VariantClear, che prevede una variante inizializzata.
 
 ## <a name="example"></a>Esempio
 
