--- a/docs/code-quality/c33022.md
+++ b/docs/code-quality/c33022.md
@@ -12,18 +12,18 @@ helpviewer_keywords:
 - C33022
 dev_langs:
 - C++
-ms.openlocfilehash: 5619150426d87b3afb5c2dc990789e304b7c11e8
-ms.sourcegitcommit: 4ed2d68634eb2fb77e18110a2d26bc0008be369c
+ms.openlocfilehash: b14636183917138d1015c4602637091a781577f9
+ms.sourcegitcommit: a6b97f5d78299ad93675de2fe0f0561f528d26c7
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/08/2020
-ms.locfileid: "89557665"
+ms.lasthandoff: 09/15/2020
+ms.locfileid: "90569522"
 ---
 # <a name="c33022"></a>C33022
 
 > Avviso C33022: rilevato utilizzo HRESULT potenzialmente errato (bassa confidenza)
 
-Si tratta di un avviso di bassa confidenza per le funzioni che restituiscono HRESULT, se è "FALSE" o "false" in un punto lungo la riga che alla fine la restituisce o assegna a una variabile restituita.
+Si tratta di un avviso di bassa confidenza per una funzione che restituisce HRESULT, se è "FALSE" o "false" in un punto lungo la riga che alla fine la restituisce o la assegna a una variabile restituita.
 
 ## <a name="example"></a>Esempio
 
