--- a/docs/code-quality/c33005.md
+++ b/docs/code-quality/c33005.md
@@ -12,18 +12,18 @@ helpviewer_keywords:
 - C33005
 dev_langs:
 - C++
-ms.openlocfilehash: b274b7d81d1e3a5a74fb14828f13ed6c867f227f
-ms.sourcegitcommit: 4ed2d68634eb2fb77e18110a2d26bc0008be369c
+ms.openlocfilehash: 6eebdc4036a8359d291461e93ddf5e093a2dd169
+ms.sourcegitcommit: a6b97f5d78299ad93675de2fe0f0561f528d26c7
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/08/2020
-ms.locfileid: "89557647"
+ms.lasthandoff: 09/15/2020
+ms.locfileid: "90569591"
 ---
 # <a name="c33005"></a>C33005
 
 > Avviso C33005: la variante ' var ' è stata specificata come parametro di input o di input/output ma non è stata inizializzata (espressione ' expr ')
 
-Questo avviso viene generato quando una variante non inizializzata viene passata a una funzione come input only o parametro di input/output, ad esempio un parametro pass-by-refrence senza \_ \_ annotazione SAL.
+Questo avviso viene generato quando una variante non inizializzata viene passata a una funzione come parametro di sola input o di input/output, ad esempio un parametro pass-by-refrence senza un' \_ \_ annotazione SAL.
 
 ## <a name="example"></a>Esempio
 
