commit translated contents

--- a/docs/code-quality/c26138.md
+++ b/docs/code-quality/c26138.md
@@ -8,20 +8,20 @@ helpviewer_keywords:
 - C26138
 author: sunnychatterjee
 ms.author: sunnych
-ms.openlocfilehash: 2e998dcdadd48e33bbd70e14263b13e52e2369b6
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: f2cc88c81994b7ad56670ca5aa0f83c41740b65d
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418452"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90683975"
 ---
 # <a name="c26138"></a>C26138
 
-> avviso C26138: sospensione di una coroutine durante il blocco del blocco \<>.
+> avviso C26138: sospensione di una coroutine durante l'attesa del blocco \<lock> .
 
 Avviso C26138 avverte quando una coroutine viene sospesa tenendo premuto un blocco. In generale, non è possibile determinare il tempo di permanenza di una coroutine nello stato Suspended, quindi questo modello può comportare una sezione critica più lunga del previsto.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice seguente genererà C26138.
 
@@ -51,8 +51,6 @@ generator<int> mutex_acquiring_generator_report_once() {
   global_m.unlock();
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Nel codice seguente vengono corretti questi avvisi.
 
