--- a/docs/code-quality/c26160.md
+++ b/docs/code-quality/c26160.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C26160
 ms.assetid: e6518687-36b4-4eae-a732-758881638295
-ms.openlocfilehash: a424bd645338d88dd3809529a0e985d48b3d2f66
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: c2ce196bddb57dec6a53bf55ee279288010abebc
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418438"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90683923"
 ---
 # <a name="c26160"></a>C26160
 
-> avviso C26160: il chiamante probabilmente non riesce a mantenere il blocco \<blocco > prima di chiamare la funzione \<Func >.
+> avviso C26160: il chiamante probabilmente non riesce a mantenere il blocco \<lock> prima di chiamare la funzione \<func> .
 
 L'avviso C26160 è simile all'avviso [C26110](../code-quality/c26110.md) ad eccezione del fatto che il livello di confidenza è inferiore. Ad esempio, la funzione può contenere errori di annotazione.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice seguente genera l'avviso C26160.
 
@@ -53,8 +53,6 @@ struct Account
 
 };
 ```
-
-## <a name="example"></a>Esempio
 
 Il codice seguente illustra una soluzione per l'esempio precedente.
 
