--- a/docs/code-quality/c28182.md
+++ b/docs/code-quality/c28182.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C28182
 ms.assetid: efec8b1f-8994-4a09-aaaf-6afaadfde883
-ms.openlocfilehash: 74c84271d435ca1a03a6c6bed7227b7a2dc0a800
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: eabe77d7ac6520ce7e215a1d8b6dfce3548a18df
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87215023"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90684430"
 ---
 # <a name="c28182"></a>C28182
 
@@ -26,9 +26,9 @@ Lo strumento di analisi del codice segnala questo avviso quando conferma che il 
 
 Se è presente un'istanza precedente non confermata della condizione, *\<note>* viene sostituito da questo testo: "vedere la riga *\<number>* relativa a una posizione precedente in cui può verificarsi questa situazione".
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
-Nell'esempio seguente viene illustrato il codice che può causare la generazione di questo messaggio di avviso da parte dello strumento di analisi del codice. In questo esempio, lo strumento di analisi del codice determina che `pNodeFree` è null nell' **`if`** istruzione e viene utilizzato il percorso del codice nel corpo di **`if`** . Tuttavia, poiché `nBlockSize` è potenzialmente zero, il corpo dell' **`for`** istruzione non viene eseguito e `pNodeFree` viene lasciato invariato. `pNodeFree`viene quindi assegnato a `pNode` e `pNode` viene utilizzato mentre è possibile che si verifichi una dereferenziazione null.
+Nell'esempio seguente viene illustrato il codice che può causare la generazione di questo messaggio di avviso da parte dello strumento di analisi del codice. In questo esempio, lo strumento di analisi del codice determina che `pNodeFree` è null nell' **`if`** istruzione e viene utilizzato il percorso del codice nel corpo di **`if`** . Tuttavia, poiché `nBlockSize` è potenzialmente zero, il corpo dell' **`for`** istruzione non viene eseguito e `pNodeFree` viene lasciato invariato. `pNodeFree` viene quindi assegnato a `pNode` e `pNode` viene utilizzato mentre è possibile che si verifichi una dereferenziazione null.
 
 ```cpp
 typedef struct xlist {
@@ -63,8 +63,6 @@ Lo strumento di analisi del codice segnala l'avviso seguente:
 ```Output
 :\sample\testfile.cpp(24) : warning C28182: Dereferencing NULL pointer. 'pNode' contains the same NULL value as 'pNodeFree' did.: Lines: 12, 14, 16, 23, 24
 ```
-
-## <a name="example"></a>Esempio
 
 Un modo per correggere l'esempio precedente consiste nel verificare la presenza `pNode` di zero prima di dereferenziarlo in modo che venga evitata una dereferenziazione null. Il codice seguente illustra questa correzione.
 
