--- a/docs/code-quality/c6053.md
+++ b/docs/code-quality/c6053.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6053
 ms.assetid: 8e25566a-e3b9-470a-820d-64221a877c53
-ms.openlocfilehash: 10fdb09fdf31ddb801e8296c1820dbb91b511cc0
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: eb028cc2d213acb6050a1195516b9bb5beb4eaee
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420874"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90685140"
 ---
 # <a name="c6053"></a>C6053
 
-> avviso C6053: la chiamata a \<funzione > non può terminare con zero la stringa \<variabile >
+> avviso C6053: la chiamata a \<function> non può terminare con zero stringa \<variable>
 
 Questo avviso indica che la funzione specificata è stata chiamata in modo tale che la stringa risultante potrebbe non essere con terminazione zero. Questo difetto può causare un sovraccarico o un arresto anomalo del buffer. Questo avviso viene generato anche se una funzione con annotazioni prevede una stringa a terminazione null a cui viene passata una stringa con terminazione null.
 
-La maggior parte delle funzioni di gestione delle stringhe Win32 e della libreria standard C richiedono e producono stringhe con terminazione zero. Alcune funzioni ' counted String ' (incluse `strncpy`, `wcsncpy`, `_mbsncpy`, `_snprintf`e `snwprintf`) non producono stringhe con terminazione zero se riempiono esattamente il buffer. In questo caso, una chiamata successiva a una funzione stringa che prevede una stringa con terminazione zero andrà oltre la fine del buffer che cerca lo zero. Il programma deve assicurarsi che la stringa termini con uno zero. In generale, è necessario passare una lunghezza alla funzione ' counted String ' una minore delle dimensioni del buffer e quindi assegnare in modo esplicito zero all'ultimo carattere nel buffer.
+La maggior parte delle funzioni di gestione delle stringhe Win32 e della libreria standard C richiedono e producono stringhe con terminazione zero. Alcune funzioni ' counted String ' (incluse `strncpy` , `wcsncpy` , `_mbsncpy` , `_snprintf` e `snwprintf` ) non producono stringhe con terminazione zero se riempiono esattamente il buffer. In questo caso, una chiamata successiva a una funzione stringa che prevede una stringa con terminazione zero andrà oltre la fine del buffer che cerca lo zero. Il programma deve assicurarsi che la stringa termini con uno zero. In generale, è necessario passare una lunghezza alla funzione ' counted String ' una minore delle dimensioni del buffer e quindi assegnare in modo esplicito zero all'ultimo carattere nel buffer.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice di esempio seguente genera questo avviso:
 
@@ -40,8 +40,6 @@ size_t f( )
   return strlen(szDest); // possible crash here
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Per correggere il problema, terminare con zero la stringa, come illustrato nel codice di esempio seguente:
 
@@ -61,9 +59,7 @@ size_t f( )
 }
 ```
 
-## <a name="example"></a>Esempio
-
-Il codice di esempio seguente corregge questo avviso utilizzando la funzione di manipolazione sicura delle stringhe `strncpy_s`:
+Il codice di esempio seguente corregge questo avviso utilizzando la funzione di manipolazione sicura delle stringhe `strncpy_s` :
 
 ```cpp
 
