--- a/docs/code-quality/c26130.md
+++ b/docs/code-quality/c26130.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C26130
 ms.assetid: 535e2356-bc84-4549-983d-7d29aee2249c
-ms.openlocfilehash: 831e20e07907068c44b2be5229166dbe30a05ae6
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: e4bb43dfc053fd7a2d7a975a20a96711a062b723
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418480"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90684081"
 ---
 # <a name="c26130"></a>C26130
 
-> avviso C26130: l'annotazione mancante \_richiede\_blocco\_mantenuto\_(\<Lock >) o \_nessun\_thread\_in competizione\_ in funzione \<Func >. In caso contrario, potrebbe trattarsi di un race condition. La variabile \<Var > deve essere protetta da blocco \<blocco >.
+> avviso C26130: l'annotazione mancante \_ richiede il \_ blocco \_ \_ ( \<lock> ) o \_ nessun \_ thread concorrente \_ \_ alla funzione \<func> . In caso contrario, potrebbe trattarsi di un race condition. La variabile \<var> deve essere protetta dal blocco \<lock> .
 
 L'avviso C26130 viene emesso quando l'analizzatore rileva un potenziale race condition ma deduce che la funzione è probabile che venga eseguita in modalità a thread singolo, ad esempio quando la funzione si trova nella fase di inizializzazione basata su determinate euristiche.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
-Nell'esempio seguente viene generato l'avviso C26130 poiché un membro `_Guarded_by_` viene modificato senza un blocco.
+Nell'esempio seguente viene generato l'avviso C26130 perché un `_Guarded_by_` membro viene modificato senza un blocco.
 
 ```cpp
 typedef struct _DATA
@@ -37,9 +37,7 @@ void Init(DATA* p)
 }
 ```
 
-## <a name="example"></a>Esempio
-
-Se il codice precedente è garantito per essere utilizzato in modalità a thread singolo, annotare la funzione utilizzando `_No_competing_thread_`, come illustrato nell'esempio seguente.
+Se il codice precedente è garantito per essere utilizzato in modalità a thread singolo, annotare la funzione tramite `_No_competing_thread_` , come illustrato nell'esempio seguente.
 
 ```cpp
 typedef struct _DATA
@@ -54,9 +52,7 @@ _No_competing_thread_ void Init(DATA* p)
 }
 ```
 
-## <a name="example"></a>Esempio
-
-In alternativa, è possibile aggiungere annotazioni a un frammento di codice usando `_No_competing_thread_begin_` e `_No_competing_thread_end_`, come indicato di seguito.
+In alternativa, è possibile aggiungere annotazioni a un frammento di codice usando `_No_competing_thread_begin_` e `_No_competing_thread_end_` , come indicato di seguito.
 
 ```cpp
 typedef struct _DATA
