--- a/docs/code-quality/c26135.md
+++ b/docs/code-quality/c26135.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26135
 ms.assetid: e9515189-8d21-473b-89f4-8b92ebd3a4f1
-ms.openlocfilehash: ea3e326efe34a72f196c12e82284435a50e4343c
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: d52da522b20dca3b731c55c35c8287ac34e30ebd
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87218468"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90684053"
 ---
 # <a name="c26135"></a>C26135
 
@@ -20,7 +20,7 @@ ms.locfileid: "87218468"
 
 L'avviso C26135 viene emesso quando l'analizzatore deduce che una funzione è una funzione wrapper di blocco con effetto collaterale di acquisizione o blocco di un blocco. Se il codice non è destinato a essere una funzione wrapper, il blocco sta per essere perso (se il blocco viene acquisito) o viene rilasciato in modo non corretto (se il blocco viene rilasciato).
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 L'esempio seguente genera l'avviso C26135 perché manca un'annotazione di effetto collaterale appropriata.
 
@@ -44,8 +44,6 @@ void MyLeave(DATA* p)
     LeaveCriticalSection(&p->cs);
 }
 ```
-
-## <a name="example"></a>Esempio
 
 L'avviso C26135 viene emesso anche quando viene rilevato un effetto collaterale di blocco condizionale. Per annotare un effetto condizionale, utilizzare l' `_When_(ConditionExpr, LockAnnotation)` annotazione, dove `LockAnnotation` è `_Acquires_lock_` o `_Releases_lock_` e l'espressione del predicato `ConditionExpr` è un'espressione condizionale booleana. Gli effetti collaterali di altre annotazioni nella stessa funzione si verificano solo quando `ConditionExpr` restituisce true. Poiché `ConditionExpr` viene utilizzato per inoltrare nuovamente la condizione al chiamante, deve coinvolgere variabili riconosciute nel contesto chiamante. Questi includono parametri di funzione, variabili membro globali o di classe oppure il valore restituito. Per visualizzare il valore restituito, usare una parola chiave speciale nell'annotazione, **`return`** , come illustrato nell'esempio seguente.
 
