--- a/docs/code-quality/c26165.md
+++ b/docs/code-quality/c26165.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C26165
 ms.assetid: a1d89bd6-08f3-4215-8a0c-b8ecfeb0cffc
-ms.openlocfilehash: 998d7b5f2ae0b390fbdfefe0bdbd3c9d5265c7a0
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6868c3296f601173e6bc11fe0f1fcc2b2538311f
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417297"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90683936"
 ---
 # <a name="c26165"></a>C26165
 
-> avviso C26165: probabilmente non è possibile riuscire a rilasciare il blocco \<blocco > nella funzione \<Func >.
+> avviso C26165: probabilmente non è possibile riuscire a rilasciare il blocco \<lock> nella funzione \<func> .
 
 L'avviso C26165 è simile all'avviso [C26115](../code-quality/c26115.md) ad eccezione del fatto che il livello di confidenza è inferiore. Ad esempio, la funzione può contenere errori di annotazione.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice seguente genera l'avviso C26165.
 
@@ -49,8 +49,6 @@ void testLockLevelledStruct(LockLevelledStruct* s) // Warning C26165
     LeaveCriticalSection(&s->a);
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Per correggere il problema, modificare l'esempio precedente nel modo seguente.
 
