--- a/docs/code-quality/c26167.md
+++ b/docs/code-quality/c26167.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C26167
 ms.assetid: 5a3d767f-31fa-45e0-8c9b-1aa776acaa45
-ms.openlocfilehash: 6ddbb68f04e118208e87f3ed8b9270c9d04088ed
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 19df4db2016b718baa11774ad6f59174c9db5e19
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418396"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90683871"
 ---
 # <a name="c26167"></a>C26167
 
-> avviso C26167: è possibile che venga rilasciato un blocco \<blocco non mantenuto > nella funzione \<Func >.
+> avviso C26167: è probabile che venga rilasciata la funzione Lock in non mantenuta \<lock> \<func> .
 
 L'avviso C26167 è simile all'avviso [C26117](../code-quality/c26117.md) ad eccezione del fatto che il livello di confidenza è inferiore. Ad esempio, la funzione può contenere errori di annotazione.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice seguente genererà C26167, oltre a C26110.
 
@@ -38,8 +38,6 @@ void ReleaseUnheldLock(DATA* p) { // Warning C26167
     Leave(p); // Warning C26110
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Nel codice seguente vengono corretti questi avvisi.
 
