--- a/docs/code-quality/c26415.md
+++ b/docs/code-quality/c26415.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26415
 ms.assetid: 4165f70a-78ae-4a03-b256-c4bd74b02d09
-ms.openlocfilehash: 90d9720e56a004cde9fb3611656732c87a3441ff
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: 45bfdd891cecb029d6abb8dabb222780a0d17f56
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88832894"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90685398"
 ---
 # <a name="c26415-smart_ptr_not_needed"></a>SMART_PTR_NOT_NEEDED C26415
 
@@ -37,7 +37,7 @@ L'interpretazione delle operazioni che possono influire sulla durata degli ogget
 - Costruttori di copia o spostamento o operatori di assegnazione
 - Funzioni non costanti
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Gestione complessa della durata.
 
@@ -61,8 +61,6 @@ void pass_message(const message_info &info)
         m.release();
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Gestione della durata complessa: rielaborazione.
 
