--- a/docs/code-quality/c26418.md
+++ b/docs/code-quality/c26418.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26418
 ms.assetid: d2c84a40-8a5d-4018-92c2-6498cdd9b541
-ms.openlocfilehash: aeff3fe272e91ac4d2c800ca44183b62a3968325
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: a553beddb92ad64654121cf4b7466e16908c4bbf
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88842065"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90685196"
 ---
 # <a name="c26418-no_value_or_const_ref_shared_ptr"></a>C26418 NO_VALUE_OR_CONST_REF_SHARED_PTR
 
@@ -32,7 +32,7 @@ Se il parametro del puntatore condiviso viene passato in base al valore o al rif
 
 - distruttore pubblico che non viene eliminato né impostato come predefinito. I distruttori vuoti vengono comunque conteggiati come definiti dall'utente.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 complicazione dell'interfaccia non necessaria
 
@@ -43,8 +43,6 @@ std::string to_string(const std::shared_ptr<T> &e) // C26418, also C26415 SMART_
     return !e ? null_string : e->to_string();
 }
 ```
-
-## <a name="example"></a>Esempio
 
 complicazione dell'interfaccia non necessaria-semplificata
 
