--- a/docs/code-quality/c26426.md
+++ b/docs/code-quality/c26426.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26426
 ms.assetid: 6fb5f6d2-b097-47f8-8b49-f2fd4e9bef0e
-ms.openlocfilehash: 8abfceefc018120646d372f9d30f1269538a0667
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: 58725fd22d0178c0d4a5ae9758d3cc87f8989173
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88844054"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90685153"
 ---
 # <a name="c26426-no_global_init_calls"></a>NO_GLOBAL_INIT_CALLS C26426
 
@@ -32,7 +32,7 @@ L'ordine di esecuzione degli inizializzatori per gli oggetti globali può essere
 
 - I membri statici della classe sono considerati globali, quindi vengono controllati anche gli inizializzatori.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 controllo della versione esterno
 
@@ -47,8 +47,6 @@ int get_api_version() noexcept {
 int get_api_version() noexcept;
 bool is_legacy_mode = get_api_version() <= API_LEGACY_VERSION; // C26426, also stale value
 ```
-
-## <a name="example"></a>Esempio
 
 controllo della versione esterno: reso più affidabile
 
