--- a/docs/code-quality/c26800.md
+++ b/docs/code-quality/c26800.md
@@ -8,20 +8,20 @@ helpviewer_keywords:
 - C26800
 author: sunnychatterjee
 ms.author: sunnych
-ms.openlocfilehash: 1e3ab8d278755c2ab5477622f535d27b9a959a1d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 27e60681820a14a804c0b320c0828e552e15c02e
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417864"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90684443"
 ---
 # <a name="c26800"></a>C26800
 
-> avviso C26800: utilizzo di un oggetto spostato da un oggetto: \<> di blocco.
+> avviso C26800: utilizzo di un oggetto spostato da un oggetto: \<lock> .
 
 L'avviso C26800 viene attivato quando la variabile viene utilizzata dopo che è stata spostata da. Una variabile viene considerata spostata da dopo che è stata passata a una funzione come riferimento rvalue. Esistono alcune eccezioni legittime per usi quali l'assegnazione, la distruzione e alcune funzioni di reimpostazione dello stato, ad esempio std:: vector:: Clear.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice seguente genererà C26800.
 
@@ -47,8 +47,6 @@ void test() {
     use_cref(x1);                // @expected(26800)
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Il codice seguente non genererà C26800.
 
