--- a/docs/code-quality/c6329.md
+++ b/docs/code-quality/c6329.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C6329
 ms.assetid: 5765bd4d-5fa1-4e51-82d6-c1837b4743db
-ms.openlocfilehash: c60dbea840e42306b4a918da7f34d5ef13887435
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: cf2ea5e8b99ae7691d6f1b62a949f4c032cb96c9
+ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419614"
+ms.lasthandoff: 09/16/2020
+ms.locfileid: "90684236"
 ---
 # <a name="c6329"></a>C6329
 
-> avviso C6329: il valore restituito per una chiamata a \<funzione > non deve essere verificato in base al numero \<>
+> avviso C6329: il valore restituito per una chiamata a \<function> non deve essere controllato \<number>
 
 Il programma sta confrontato un numero con il valore restituito da una chiamata a `CreateFile`. Se `CreateFile` viene completato, viene restituito un handle aperto all'oggetto. Se l'operazione ha esito negativo, viene restituito `INVALID_HANDLE_VALUE`.
 
-## <a name="example"></a>Esempio
+## <a name="examples"></a>Esempi
 
 Il codice può causare questo avviso:
 
@@ -30,8 +30,6 @@ if (CreateFile() == NULL)
   return;
 }
 ```
-
-## <a name="example"></a>Esempio
 
 Questo codice corregge l'errore:
 
